static/css/sheets.css
/* ... */
#sheet.boxed .text,
#sheet.boxed .outside  {
	border: 1px solid #333;
	padding: 4px;
	background-color: white;
}

#sheet.boxed #sources {
	list-style-position: outside;
}

#sheet.boxed .sourceControlsOpen .text,
#sheet.boxed .sourceControlsOpen .outside {
	background-color: inherit;
}

#sources .sortPlaceholder {
	min-height: 60px;
	margin: 20px 0;
	background-color: #DAE83F;
}

.indented-1 {
	padding-left: 100px !important;
	padding-right: 100px !important;
}

.indented-2 {
	padding-left: 130px !important;
	padding-right: 130px !important;
}

.indented-3 {
	padding-left: 160px !important;
	padding-right: 160px !important;
}

.comment, .oldComment {
	font-size: 17px;
	min-height: 30px;
	padding-top:4px;
}

.outsideBi {
	/* Fix webkit bug for extra spacing below numbered li with floats */
	display: inline-block;
	vertical-align: top;
	width: 100%;
}

.addedBy {
	margin-top: 3px;
	font-size: 13px;
	font-style: italic;
	color: #555;
}

.placeholder {
	background: #f3f3f3;
	margin-top: 22px;
	border-radius: 5px;
}

.inEditMode {
	outline-color: rgb(91, 157, 217);
	outline-style: auto;
	outline-width: 5px;
}

#belowSheet {
	height: 100px;
}

#tooltip {
	position: absolute;
	z-index: 3000;
	margin-left: -80px;
	margin-top: 2px;
	border-radius: 5px;
	-moz-border-radius: 5px;
	border: 1px solid #444;
	background-color: #eee;
	padding: 4px 8px;
}

#tooltip h3, #tooltip div {
	font-size: 17px;
	margin: 0;
 }

#addToSheetModal {
	width: 400px;
}

#addParashaToSheetModal {
	width:500px;
}
#addParashaToSheetModal .header {
	font-weight: bold;
	padding-bottom: 10px;
}

#addParashaToSheetModal .cancel {
	padding-top: 10px;
}

#addParashaToSheetModal li {
	width:150px;
	display:inline;
	padding: 2px 0 2px 0;
	cursor: pointer;
	cursor: hand;
}

#addParashaToSheetModal li:hover span{
	text-decoration: underline;
}

#addParashaToSheetModal ol {
	display: flex;
	flex-flow: row wrap;
	margin: auto;
	padding: 0;
}

.interface-hebrew #addParashaToSheetModal{
	direction: rtl;
}

#addToSheetModal .header {
	font-size: 22px;
}

#embedSheetModal {
	width: 400px;
}

#embedSheetModal .header {
	font-size: 22px;
}

#sheetsContent #embedSheetModal textarea {
	width: 100%;
	margin-top: 0;
	height: 80px;
	padding: 8px;
}

#embedSheetModal .sub {
	margin: 0 0 8px;
	font-size: 13px;
}

#embedSheetModal .content {
	margin: 30px auto;
}

#publishPromptModal {
	position: fixed;
	top: 50%;
	left: 50%;
	margin-top: -73px;
	margin-left: -285px;
	max-width: 96%;
	width: 550px;
}

#publishPromptModal .header {
	font-size: 24px;
	font-weight: bold;
}

#publishPromptModal p {
	font-size: 18px;
	margin: 14px 0;
}

#sheetList {
	list-style-type: none;
	background-color: white;
	border-radius: 5px;
	padding: 8px 0;
	border: 1px solid #ccc;
	margin: 13px 20px;
	max-height: 300px;
	overflow: auto;
}

#sheetList .sheet {
	text-align: left;
	cursor: pointer;
	padding: 2px 10px;
}

#sheetList .sheet.selected {
	background-color: #08C;
	color: white;
}

#sheetLoading {
	font-weight: bold;
	font-size: 17px;
}

.textIcon {
	font-size: 20px;
	font-weight: bold;
	margin: 3px;
	font-family: sans-serif;
	cursor: pointer;
}

#empty {
	display: none;
	text-align: center;
	border-radius: 10px;
	padding: 15px 25px;
	font-size: 19px;
	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
	border: 1px solid #aaa;
	background-color: #eee;
}

#empty .fa-times {
	float: right;
	cursor: pointer;
}
#empty .icon-remove:hover {
	color: #08c;
}

#empty #howItWorks {
	display: none;
	text-align: left;
	padding-top: 20px;
	border-top: 1px solid #aaa;
	margin-top: 20px;
}

.interface-hebrew #empty #howItWorks{
	text-align: right;
}

#empty h1 {
	font-size: 32px;
	margin-bottom: 16px;
	text-align: center;
}

#empty h3 {
	margin: 10px 0;
	font-size: 18px;

}

#empty ul {
	list-style-type: decimal;
}

#empty ul b {
	font-size: 22px;
}

#empty li {
	margin: 8px 0;
}

#empty #cite {
	font-size: 18px;
	margin-left: 20px;
	margin-top: 4px;
	color: #005580;
}

#empty .controls {
	font-size: 17px;
	padding: 0px 5px 2px 3px;
	margin: 0 4px;
	background: white;
	border: 1px solid #ccc;
	border-radius: 3px;
}

#empty #loginWarning {
	margin-top: 24px;
	color: #B94A48;
	font-size: 17px;
}

#printFooter {
	display: none;
	margin: 50px 0 0;
	padding-top: 8px;
	text-align: center;
	border-top: 1px solid #ddd;
	page-break-inside: avoid;
}

#printFooter img {
	width: 56px;
	height: 56px;
}

#printFooter div {
	display: inline-block;
	text-align: left;
	font-size: 14px;
	position: relative;
	left: -5px;
	top: 7px;
}

.cke_editable {
	position: relative;
	z-index: 20;
}

.clear {
	clear: both;
}


a {
	color: #08C;
	text-decoration: none;
}
a:hover {
  color: #005580;
  text-decoration: underline;
}
a:focus {
  outline: thin dotted #333;
  outline: 5px auto -webkit-focus-ring-color;
  outline-offset: -2px;
}
a:hover,
a:active {
  outline: 0;
}


.btn-primary a {
	color: white;
}

.btn-primary:hover a {
	text-decoration: none;
}


@media screen and (max-width: 870px) {
	body {
		background-color: white !important;
	}

	#sheet {
		width: auto;
		padding: 0px 20px;
		margin: 100px auto 70px;
		box-shadow: none;
	}
	#sheet.s2Sheet {
	width:auto;
	padding: 0px;
	}


	#addSourceModal {
		width: 80%;
	}

	#sheetHeader {
		width: 100%;
		margin-left: 0;
	}

	#controls {
		margin-left: 0;
		left: 0;
	}

	#rightButtons #controls {
		position: static;
		display: block;
		width: auto;
		padding: 0px;
		background-color: transparent;
		box-shadow: none;
		border: none;
	}

	#empty iframe {
		width: 100%;
		height: auto;
	}

	#lastSaved, .sheetsEditNavTop, .inlineAddButton, #addInterface, #sourceControls {
		display: none;
	}

}
/* ... */

